--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -29,7 +29,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11719072.md#1" target="_blank">父亲一画龙 天上就乌云密布</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11719072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/1803130151512357-150x120.jpg" align ="left"></a>我父亲是山西大学油画专业的，后来在山西大同当美术教师，经常去云冈石窟、九龙壁等古迹临摹写生。作为一个无神论者，父亲有很多事解释不了。比如他曾去修复永乐宫壁画，黄昏收工后，又进大殿临摹，突然感到身后站着一个人，在他后面吹气，吓得他跑出了大殿；父亲还喜欢画佛像，有一次画好一个佛像，竟看到佛像发出了层层金光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/7/11/n2586681.md#1" target="_blank">和尚三世之前为官  为何今世出家绘画廊</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/7/11/n2586681.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1607111132312483-150x120.jpg" align ="left"></a>清朝时曾有几个长途跋涉的旅客偶然经过某地一处废弃的古庙，便到里面休息一会儿。只见里面的建筑大多都已破败，然而两边的画廊却依然完好。画廊不仅全部都画满了，而且上面的图案还很奇异，不知是出于什么人的手笔。众人依次看了一遍：有骑着老虎，打扮妖艳的女妖；对镜梳妆的女骷髅；还有把男子捆绑在铜柱上挖其心肝的女妖；以及男人被女妖摔在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/13/n11719884.md#1" target="_blank">庐山山水（上）</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/13/n11719884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Stele_set_up_at_Lushan_Hot_Spring-150x120.jpg" align ="left"></a>我何等幸运，有机会把燥热留在山下，循着前人的挑盐路，从草屯入埔里、行车横越整个南投县境，再沿十四号公路往东北方，抵达群山环抱的避暑胜地——庐山，暂住几天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/9/n11709454.md#1" target="_blank">天地清明引(135) 东流水－大疫横行4</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/9/n11709454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>金府，楚淮阳正向金山禀报状况：“六部的各位尚书大人，皆已送了药草。吏部侍郎达清不肯受，咒骂一阵，扔了出来。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726258.md#1" target="_blank">诗歌：诗</a><br></h3> 天语化凡声 发抒心志腾 诗吟穹深处 心念向苍生......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724134.md#1" target="_blank">五律：诗</a><br></h3>不能当饭吃，何以作钱花。 子美愁寻舍，渊明苦养家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724147.md#1" target="_blank">七律：飞雪迎“神韵”</a><br></h3> 忽若春风花瓣雨， 纷纷白雪舞芳菲。 素笺款款千年语， 粉蝶翩翩亿万飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724144.md#1" target="_blank">调笑令．神传文化之光</a><br></h3>诚信， 诚信， 贸易往来兴顺。 神传文化遵循， 厚德先民善仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:42 PM			</td></tr>
