--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -29,9 +29,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank">删“自由”增党控 复旦章程大变脸引炮轰</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/FuDanUni-150x120.jpg" align ="left"></a>复旦大学大幅度修改章程的消息在社媒中刷屏，尤其是新章程中删除了“思想自由”，往后挪动了“学术独立”，大幅增加了“党”的内容，引发强烈争议。有网友斥：“留着这几句话装装门面也行啊，难道如今真的连门面都不用装，干脆裸奔了？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank">中共补贴企业数据曝光 中石化和广汽获最多</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909071515262198-150x120.jpg" align ="left"></a>中国企业2019年收到的国家补贴继续扩大，今年前9个月发放补贴款增长了15%，其中中石化和汽车制造商获得的补贴最多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-957395718-150x120.jpg" align ="left"></a>去年因被举报偷税漏税遭官方重罚的大陆女星范冰冰，在沉寂一年后东山再起。据陆媒16日披露，范冰冰刚刚赴美为好莱坞影片《355》配音归国，又连着两天受邀走红毯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11733936.md#1" target="_blank">【热点互动】打造金融中心 北京拿澳门作秀？</a><br></h3>周三（12/18）习近平抵达澳门访问。澳门安保空前严厉，轻轨停驶，多家港媒记者被拒入境，外传中共有意给予澳门优惠政策，将其打造成金融中心。
-
-不过在习访问前夕， 国际评级机构惠誉刚把澳门评级展望降至“负面”。 中共的“优惠政策”能把澳门变成香港吗？ 澳门是“一国两制”成功的范例吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-150x120.jpg" align ="left"></a>广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11733354.md#1" target="_blank">两岸密使 叶选宁牵线台湾官员密会杨尚昆</a><br></h3>中共总政联络部前部长叶选宁、台湾总统府前资政曾永贤先后去世后，他们从1992年开始担任“两岸密使”的事实被证实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11733311.md#1" target="_blank">国际人权组织吁加拿大惩罚中共电视台</a><br></h3>总部位于香港和欧洲的人权组织“保障卫士（Safeguard Defenders）”向加拿大广播电视和电信委员会（CRTC）提出了投诉，并呼吁加拿大政府使用《腐败外国官员的受害者法》——加拿大版的《马格尼茨基法》，去惩罚那些负责广播这种认罪供词视频的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11731683.md#1" target="_blank">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
