--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/18/n11530054.md#1" target="_blank">知情人揭湖南女村支书“灭门案”背后内情</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/18/n11530054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/IMG_8415-150x120.jpg" align ="left"></a>9月15日，湖南常德市临澧县新安镇樟木村发生一起杀人事件，女村支书黄卫华及其婆婆、公公被杀死，凶手跳楼自杀，当地警方极力封锁消息，凶手家属对于事件表示质疑，一名知情村民向大纪元记者讲述了事件的来胧去脉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 10:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/17/n11526938.md#1" target="_blank">黄河现今年第3号洪水 丹江口现最大入库洪水</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/17/n11526938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/11/61113050225459-150x120.jpg" align ="left"></a>近期因持续降雨，导致陕西关中、陕南6市15县区40,571人受灾，黄河出现2019年第3号洪水；丹江口水库也迎来今年最大入库洪水。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 8:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/14/n11521722.md#1" target="_blank">江西推火葬引多名老人自杀 挖坟抢尸惹抗议</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/14/n11521722.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/5b603ea8b19f9-150x120.jpg" align ="left"></a>近年来江西省发起一场以火葬取代土葬的运动，舆论沸腾后，去年8月似乎叫停。今年江西九江市的强推火葬运动又卷土重来，导致一些老人在火葬实施前自杀，希望入土为安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 8:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/11/n11514931.md#1" target="_blank">河南艾滋血祸舞台剧伦敦上演 中共阻止未果</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/11/n11514931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c38d8e3cdf2569_ttl7daybdP_GettyImages-464984888-150x120.jpg" align ="left"></a>有关中共河南官员大搞血浆经济导致艾滋病蔓延的舞台剧最近在英国伦敦上演。该剧由原是河南医生的王淑平揭发河南艾滋村黑幕的经历改编而成。演出前，中共国安部曾约谈王淑平在大陆的亲友等，企图阻止上演未果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月12日 5:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/24/n11609061.md#1" target="_blank">河北兴华钢铁厂发生火灾 导致7人死亡</a><br></h3>10月24日，中共河北应急管理厅网站消息，今天（24日）凌晨日3时30分，邯郸武安河北兴华钢铁有限公司烧结车间皮带通廊着火，导致7人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/24/n11609128.md#1" target="_blank">上海普陀发生严重交通事故 已致5死9伤</a><br></h3>10月24日上午9时25分许，上海金沙江路发生严重交通事故，目前已致5死9伤。有现场目击者回忆事发瞬间时说，一辆小车在行驶时忽然加速冲向人群，一辆白色轿车和几辆电动车避让不及被撞飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/15/n11589376.md#1" target="_blank">“像在炸山一样”广西化工厂爆炸4死6伤</a><br></h3>10月15日上午，广西玉林一家化工厂发生爆炸，官方消息称，事故已造成4死6伤，其中2人重伤。涉事的工厂附近的一家企业负责人形容爆炸的巨响和震感“就像在炸山一样”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 6:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/15/n11589148.md#1" target="_blank">吉林白城一银行大楼倒塌 致5死4伤</a><br></h3>10月14日6时许，吉林省白城市一家银行办公楼在装修施工中倒塌，导致9人被困，其中5人死亡，4人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 5:04 PM							</td></tr>
