--- a/gb/ncid281_4.md
+++ b/gb/ncid281_4.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/11/n11446183.md#1" target="_blank">《甲方乙方2》开机 冯小刚方面称与新片无关</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/11/n11446183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-513509056-150x120.jpg" align ="left"></a>被外界视为《甲方乙方》续集的新片《甲方乙方2》，8月11日在山东青岛开机。电影由朱凌峰导演，今年4月在中国电影局立项。值得关注的是，冯小刚方面回应媒体时明确表示，该项目与前作的导演冯小刚无关，冯竟然对立项并不知情，令人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月12日 8:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/9/n11443212.md#1" target="_blank">李英爱重返大银幕 新片入围多伦多影展</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/9/n11443212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/1605242332471487-e1464147279509-150x120.jpg" align ="left"></a>热门韩剧《大长今》的主角李英爱，继2005年主演朴赞郁执导的《亲切的金子》后，今年重返大银幕。其参演的韩片《寻找我》（Bring Me Home），日前入围第44届多伦多国际影展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月10日 7:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/7/n11437780.md#1" target="_blank">陆片竞逐金马奖遭禁 导演张赞波斥电影局可耻</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/7/n11437780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG11440842784-150x120.jpg" align ="left"></a>第56届台湾金马奖将于11月23日举行，参赛作品7月31日截止申报。不过，陆媒《中国电影报》8月7日在官方微博引述中共国家电影局的消息称，“暂停大陆电影及人员参加今年的台湾金马影奖。”消息一出，大陆独立导演张赞波在脸书发文，怒斥中共电影局“可耻”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 3:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/1/n11422492.md#1" target="_blank">内幕：澳洲华裔教授薛京灵与中共的合作</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/1/n11422492.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e66dce956f0a06790a1183c9fe55ee98-150x120.jpg" align ="left"></a>近期被澳洲媒体曝光的新南威尔士大学计算机科学专业教授薛京灵，不仅是中共“千人计划”的一员，与中共国防科技大学有“深厚”联系；还在大陆某些公司任职，甚至跟华为还有关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月02日 4:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/19/n11533049.md#1" target="_blank">陆综拒付韩国版权费 MBC起诉中国制作公司</a><br></h3>大陆电视台近年频繁抄袭韩国综艺节目，即便曾经签约并向韩国购买版权的少数节目，也爆出中方不愿支版权费。据韩媒报导，中国版《蒙面歌王》虽有向韩国MBC购买版权，但四年来，MBC一直未收到收益金，因此决定起诉中国版《蒙面歌王》制作公司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 6:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/23/n11473878.md#1" target="_blank">《哪吒》走红被指抄袭 影视公司喊片方对剧本</a><br></h3>大陆动画片《哪吒之魔童降世》（《哪吒》）上映29天，已连续28天成为单日票房冠军，累计票房超过43.1亿元人民币，成为大陆最卖座动画片。不过，23日下午，“晋升中国电影票房总榜第三名的《哪吒》涉嫌抄袭”突然冲上微博热搜榜首，原来，“中影华腾”影视公司喊话《哪吒》片方对《五维记忆》创意秀剧本。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月24日 6:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/15/n11454086.md#1" target="_blank">中国大陆电影人移民加拿大为何被拒？</a><br></h3>中国大陆影视圈的千万富翁卫先生多次来加拿大旅游后，爱上这个国家，并决定移民加拿大。他以自雇人士（Self-employed）的身份递交移民申请，但很不顺利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 12:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/13/n11449886.md#1" target="_blank">吃了一盘黑木耳 杭州男子失去意识进ICU</a><br></h3>上月底，浙江杭州40多岁的张先生被送往医院。经检查，他的肝、肾功能衰竭，有严重凝血功能障碍。医生表示，张先生是吃了隔夜的黑木耳导致的米酵酸菌中毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 3:41 PM							</td></tr>
