--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,7 +10,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738852.md#1">圣诞卡求救信发酵 乐购暂停从中国进货</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750032.md#1">程晓农：经济全球化的中共陷阱</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749390.md#1">东方觉：辛苦农民工 讨薪路上难</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748931.md#1">陆客：在大陆政治学习学出三个更正</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737584.md#1">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748133.md#1">陈思敏：向日本国会议员行贿的中企有何背景</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747307.md#1">周晓辉： 川习再次会面与英国预言家的预言</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11745899.md#1">美国故事：阶前万里 古罗马文明在北美</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747262.md#1">任重：中共外汇告急 民间资本加速外逃</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -30,7 +30,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播预告】2020元旦游行 民阵：毋忘承诺</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750208.md#1">【新闻大破解】美中角力台湾 2020攸关未来</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1">【新闻看点】美中经济两重天 川普：与习签协议</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750049.md#1">郭台铭急改口：自己是红媒最大受害者</a><br>
@@ -42,6 +41,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749889.md#1">一中国留学生因杀人在日本被处以绞刑</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749281.md#1">【珍言真语】徐家健：打压黄色经济圈适得其反</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750144.md#1">墨西哥对中国铝箔和压力锅征收关税</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750070.md#1">中国年轻人债台高筑 为何中共最不乐见</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749534.md#1">国民党挡反渗透法 林飞帆：到底在反对什么？</a><br>
